Add HTML to Lab 1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Michael Kaczowka: Home</title>
+    <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <header>
+      <h1>Michael Kaczowka</h1>
+    </header>
 
+<main id="content">
+    <h2>About Me:</h2>
+
+      <p>
+        I am a second year Information Technology student at the Illinois
+        Institute of Technology minoring in Industrial Technology and
+        Management. I'm a Chicago native and have lived here all my
+        life with a love for computers and tech, so IIT was the place for me.
+        Along with being a full time student, I also am
+        a striker on the Illinois Tech Men's Soccer team. I am passionate about
+        music as well as discovering different and new artists to listen to.
+        Aditionally, I am a big fan of the soccer club Manchester City as
+        well as the Polish National Team.
+      </p>
+
+    <h2>Things I like to do</h2>
+      <ul>
+        <li>True crime TV shows</li>
+        <li>Video editing</li>
+        <li>Body Building</li>
+        <li>Music</li>
+      </ul>
+</main>
+    <footer id="footer">
+      <p>Site © Michael Kaczowka. All Rights Reserved.</p>
+    </footer>
+
+  </body>
+</html>
