Add sentance to about me section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         a striker on the Illinois Tech Men's Soccer team. I am passionate about
         music as well as discovering different and new artists to listen to.
         Aditionally, I am a big fan of the soccer club Manchester City as
-        well as the Polish National Team.
+        well as the Polish National Team. I look forward to increasing my
+        ability in web development in this class.
       </p>
 
     <h2>Things I like to do</h2>
